# basecon

./: .gitignore  pyproject.toml  testing.ipynb
src/basecon/: basecon.py  inpoutp.py
src/basedisp/: __main__.py  ascii.txt  inpoutp.py
src/basedisp/cli/: __init__.py
src/basedisp/core/: __init__.py
src/basedisp/display/: __init__.py  bases.py  display.py
src/basedisp/utils/: functions.py
