[project]
name = "basedisp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
basedisp = "basedisp.__main__:main"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "hatch>=1.13.0",
    "hatchling>=1.26.3",
    "jupyter>=1.1.1",
    "mypy>=1.13.0",
    "ruff>=0.8.1",
    "twine>=6.0.1",
]
[tool.ruff]
line-length = 80
